--- a/butte-flatbuffers/Cargo.toml
+++ b/butte-flatbuffers/Cargo.toml
@@ -1,13 +1,12 @@
 [package]
-name = "flatbuffers"
+name = "butte-flatbuffers"
 version = "0.6.0"
-authors = ["Robert Winslow <hello@rwinslow.com>", "FlatBuffers Maintainers"]
+authors = ["Robert Winslow <hello@rwinslow.com>", "FlatBuffers Maintainers", "Butte Maintainers"]
 license = "Apache-2.0"
-description = "Official FlatBuffers Rust runtime library."
-homepage = "https://google.github.io/flatbuffers/"
-repository = "https://github.com/google/flatbuffers"
+description = "Butte FlatBuffers Rust runtime library."
+repository = "https://github.com/butte/butte-rs"
 keywords = ["flatbuffers", "serialization", "zero-copy"]
 categories = ["encoding", "data-structures", "memory-management"]
 
 [dependencies]
-smallvec = "0.6"
+smallvec = "1.0.0"
