--- a/butte/Cargo.toml
+++ b/butte/Cargo.toml
@@ -31,7 +31,7 @@ categories = ["data-structures", "encoding", "parser-implementations"]
 [dependencies]
 anyhow = "1.0.19"
 derive_more = "0.15.0"
-flatbuffers = "0.6.0"
+flatbuffers = { package = "butte-flatbuffers", path = "../butte-flatbuffers" }
 heck = "0.3.1"
 hexf-parse = "0.1.0"
 itertools = "0.8.1"
